--- a/src/scss/partials/_settings.scss
+++ b/src/scss/partials/_settings.scss
@@ -1,6 +1,7 @@
 $maxWidth: 1200px;
 
-$smallScreen: 600px;
+$smallScreen: 800px;
+$mediumScreen: 1000px;
 
 $timerFontSize: 5rem;
 $fontSize: 1.3rem;
