--- a/src/scss/partials/_settings.scss
+++ b/src/scss/partials/_settings.scss
@@ -8,10 +8,14 @@ $fontSize: 1.3rem;
 $fontSizeSmall: 1rem;
 
 $colorGreen: #4fb99f;
+$colorDeepGreen: #33ab8d;
 $colorYellow: #f2b134;
+$colorDeepYellow: #dd9614;
 $colorOrange: #ed553b;
+$colorRed: #e44326;
 $colorBlue: #112f41;
 $colorDarkBlue: #222222;
+$colorBlack: #1a1a1a;
 $colorWhite: #ffffff;
 $colorShadow: #ddd;
 
