--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -50,6 +50,32 @@ body {
   }
 }
 
+.controls {
+  // margin: 50px;
+  & > * {
+    &:nth-child(1) {
+      transition: background-color 0.2s ease;
+      &:hover {
+        background-color: $colorDeepGreen !important;
+      }
+    }
+    &:nth-child(2) {
+      background-color: $colorYellow;
+      transition: background-color 0.2s ease;
+      &:hover {
+        background-color: $colorDeepYellow !important;
+      }
+    }
+    &:nth-child(3) {
+      background-color: $colorOrange;
+      transition: background-color 0.2s ease;
+      &:hover {
+        background-color: $colorRed !important;
+      }
+    }
+  }
+}
+
 .c {
   &-timer {
     // margin: 20px 0;
@@ -86,7 +112,18 @@ body {
 
     &--close {
       margin: 0;
+      padding: 15px 20px;
       font-size: $fontSizeSmall;
+      background-color: $colorWhite;
+      color: $colorBlack;
+      border-radius: 50%;
+      border: 1px solid $colorBlack;
+      transition: background-color 0.2s ease;
+      &:hover {
+        background-color: $colorRed !important;
+        color: $colorWhite;
+        border: 1px solid $colorRed;
+      }
     }
 
     &:hover {
@@ -100,7 +137,7 @@ body {
     @include boxShadow(20px);
 
     &__input {
-      width: 80%;
+      width: calc(80% - 10px);
       padding: 20px;
       @include border;
       border-radius: 5px 0 0 5px;
@@ -118,7 +155,7 @@ body {
 
     &__button {
       text-align: center;
-      width: 20%;
+      width: calc(20% - 10px);
       padding: 20px 0;
       color: $colorWhite;
       display: block;
@@ -193,7 +230,7 @@ body {
     &-flex {
       display: flex;
       flex-wrap: wrap;
-      gap: 0;
+      gap: 20px;
     }
   }
 }
