--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -10,12 +10,18 @@ body {
   &-title {
     color: $colorWhite;
     text-decoration: underline;
+    text-decoration-color: $colorOrange;
+  }
+  &-img {
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
   }
 }
 
 .img {
   &-presentation {
     height: auto;
+    max-width: 200px;
     display: block;
     width: 100%;
   }
@@ -272,5 +278,41 @@ body {
       flex-wrap: wrap;
       gap: 20px;
     }
+  }
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
   }
 }
